[package]
name = "ocl_test"
version = "0.1.0"
authors = ["CeciliaZ030 <CeciliaZ030@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19"
num = "0.4"
rand = "0.7.3"
num-traits = "0.2.14"
time = "0.1.40"
ocl-extras = "0.1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false